--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,34 @@
 # This config was automatically generated from your source code
 # Stacks detected: deps:node:.
 version: 2.1
+orbs:
+  node: circleci/node@5
 jobs:
-  build:
-    docker:
-      - image: cimg/base:current
-    resource_class: antasena/label
+  test-node:
+    # Install node dependencies and run tests
+    executor: node/default
     steps:
-      - run: echo "Hi I'm on a Container Runner!"
+      - checkout
+      - node/install-packages:
+          pkg-manager: npm
+      - run:
+          name: Run tests
+          command: echo \"No test specified in package.json\"
+  deploy:
+    # This is an example deploy job, not actually used by the workflow
+    docker:
+      - image: cimg/base:stable
+    steps:
+      # Replace this with steps to deploy to users
+      - run:
+          name: deploy
+          command: '#e.g. ./deploy.sh'
 workflows:
-  build-workflow:
+  build-and-test:
     jobs:
-      - build
-    # - deploy:
-    #     requires:
-    #       - test-node
+      - test-node
+      - deploy
+    - deploy:
+        requires:
+          - test-node
+  
