--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
           command: '#e.g. ./deploy.sh'
 workflows:
   build-and-test:
-    jobs:
+    - jobs:
       - test-node
 
     - deploy:
