--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon run dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "node-telegram-bot-api": "^0.66.0"
-  }
+    "node-telegram-bot-api": "^0.66.0",
+    "nodemon": "^3.1.9"
+  },
+  "description": ""
 }
